# CICLOPS_code

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
Django2/mysite2/: wsgi.py
Django2/mysite2/mysite2/: asgi.py  settings.py  urls.py
Django2/mysite2/polls2/: esegui.py  gendisp.py  models.py  views.py
Django2/mysite2/polls2/migrations/: 0001_initial.py  0002_auto_20200213_1602.py  0003_auto_20200225_1025.py  0004_auto_20200225_1436.py  0005_auto_20200225_1519.py  0006_auto_20200226_1051.py  0007_remove_pulseprofile_disp_profile1.py
Django2/polls2/: apps.py
ciclops_backend/: base.py  ffa.py  produce_profiles.py
ciclops_backend/tests/: test_ffa.py
django/project/: db_final.sqlite3  gdp.py  import.py
django/project/analyze/: gdp.py  models.py  views.py
django/project/analyze/migrations/: 0001_initial.py  0002_data_key.py  0003_auto_20200213_1557.py  0004_auto_20200220_1218.py  0005_auto_20200220_1606.py  0006_auto_20200225_1433.py  0007_auto_20200225_1459.py  0008_auto_20200226_1021.py
django/project/project/: esegui.py  settings.py  urls.py
docs/: conf.py  index.rst
docs/ciclops_backend/: index.rst
notebooks/: Generate dispersed profiles.ipynb
