[metadata]
name = ciclops_backend
author = Matteo Bachetti
author_email = matteo@matteobachetti.it
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = www.inaf.it
description = CICLOPS backend operations
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = matteobachetti/CICLOPS_code

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numba
    numpy
    scipy


[options.extras_require]
all =
    hendrics
test =
    hendrics
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
ciclops_backend = data/*

[tool:pytest]
testpaths = "ciclops_backend" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    ciclops_backend/_astropy_init*
    ciclops_backend/conftest.py
    ciclops_backend/*setup_package*
    ciclops_backend/tests/*
    ciclops_backend/*/tests/*
    ciclops_backend/extern/*
    ciclops_backend/version*
    */ciclops_backend/_astropy_init*
    */ciclops_backend/conftest.py
    */ciclops_backend/*setup_package*
    */ciclops_backend/tests/*
    */ciclops_backend/*/tests/*
    */ciclops_backend/extern/*
    */ciclops_backend/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
